<resources>
    <string name="app_name">EMMS</string>
    <string name="app_name_debug">EMMSUAT</string>
    <string name="login_id_hint">Please enter account</string>
    <string name="login_password_hint">Please enter password</string>
    <string name="pleaseInput">Please input</string>
    <string name="warning_title">Warm prompt</string>
    <string name="network_error">Please check your network</string>
    <string name="warning_message_confirm">OK</string>
    <string name="warning_message_no_user">Please input employee ID</string>
    <string name="warning_message_no_password">Please input user password</string>
    <string name="exit">Exit</string>
    <string name="warning_message_error">Invalid employee ID no or incorrect password</string>
    <string name="warning_message_frozen">Account number freezed</string>
    <string name="task_history_query">Task history query</string>
    <string name="repair">Repair</string>
    <string name="repair_new">Repair</string>
    <string name="move_car">Machine moving</string>
    <string name="transfer_model">Machine tuning</string>
    <string name="other">Others</string>
    <string name="login">Login</string>
    <string name="systemSetting">Setting</string>
    <string name="logining">Logining. . .</string>
    <string name="public_machine">Public Machine</string>
    <string name="login_error">Invalid employee ID no or incorrect password</string>
    <string name="create_task">Create Task</string>
    <string name="repair_tag">Repair</string>
    <string name="maintenance">Maintain</string>
    <string name="team_status">Team staff status</string>
    <string name="team">Team staff status</string>
    <string name="select">Please click</string>
    <string name="pleaseInputOrSelect">Please click and scroll down</string>
    <string name="scan">Please scan</string>
    <string name="task_type">Task type:&#160; </string>
    <string name="module_type">Module type:&#160; </string>
    <string name="task_t">Task type:&#160;</string>
    <string name="creater">Creator:&#160;</string>
    <string name="applicanter">Creator:&#160;</string>
    <string name="mainPerson">Principal:&#160;</string>
    <string name="equipment_num">Machine number:&#160; </string>
    <string name="task_equipment_num">Machine number:&#160; </string>
    <string name="e_num">Machine num:&#160; </string>
    <string name="group">Groups:&#160;</string>
    <string name="belongGroup">Groups:&#160;</string>
    <string name="equipment_name">Equipment name:&#160; </string>
    <string name="hasEquipment">Task properties:&#160;</string>
    <string name="IsHasEquipment">Task properties:</string>
    <string name="haveEquipment">Equipment related</string>
    <string name="NothaveEquipment">Equipment irrelevant</string>
    <string name="task_subtype_name">Task sub type:&#160; </string>
    <string name="task_description">Task description:&#160;</string>
    <string name="task_create_description">Task description type:&#160;</string>
    <string name="task_status">Task status:&#160;</string>
    <string name="task_s">Task status</string>
    <string name="time">Created time:&#160;</string>
    <string name="title_time">Time</string>
    <string name="task_description_hint"> &#160;Task Description</string>
    <string name="hint_search_box">Search</string>
    <string name="nothing_found">No search result</string>
    <string name="title_search_task_type">Task Type</string>
    <string name="title_search_task_subtype">Task Sub Type</string>
    <string name="title_search_group">Group</string>
    <string name="title_search_equipment_name">Equipment Name</string>
    <string name="title_search_equipment_nun">Machine Number</string>
    <string name="dialog_tips">Success to create task!</string>
    <string name="waiting">Is submitting，please wait. . .</string>
    <string name="tips_nfc">Please swipe your card at the back of the phone</string>
    <string name="error">Tips</string>
    <string name="no_nfc">No NFC function was found in this Equipment</string>
    <string name="nfc_disabled">NFC is not enabled\n Please go to the wireless settings to enable</string>
    <string name="repair_task">Repair Task</string>
    <string name="repair_task_new">Repair Task</string>
    <string name="maintain_task">Maintenance Task</string>
    <string name="move_car_task">Machine moving Task</string>
    <string name="other_task">Other Task</string>
    <string name="transfer_model_task">Machine tuning Task</string>
    <string name="working">In progress</string>
    <string name="paused">Has been suspended</string>
    <string name="group_type">Groups:&#160;</string>
    <string name="grouptype">Groups:&#160;</string>
    <string name="device_num">Machine number:&#160;</string>
    <string name="device_name">Machine name:&#160;</string>
    <string name="task_state">Task status:&#160; </string>
    <string name="repair_time">Created time:&#160;</string>
    <string name="start_time">Start time:&#160; </string>
    <string name="end_time">Finish time:&#160;</string>
    <string name="task_descripbe">Task description:&#160;</string>
    <string name="standardWorkTime">Working hours:&#160;</string>
    <string name="verifyWorkTime">&#160;Task verify hour:&#160;</string>
    <string name="verifyWorkTimeRemark">&#160;Task verify note:&#160;</string>
    <string name="changeWorkTimeRemark">Modify time notes:&#160;</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="orders">Orders</string>
    <string name="task_state_order">Task status:&#160;</string>
    <string name="device_name_order">Equipment name:&#160;</string>
    <string name="create_time">Created time:&#160;</string>
    <string name="linked_order">Task order accepted</string>
    <string name="task_number">Task num:&#160;</string>
    <string name="issue_time">Issued time:&#160;</string>
    <string name="receive_time">Received time:&#160;</string>
    <string name="Approver">Approver:&#160;</string>
    <string name="ApproverTime">Approval time:&#160;</string>
    <string name="ApproverReason">Reason:&#160;</string>
    <string name="device_count">Total:&#160;</string>
    <string name="dealing_count">Processing:&#160;</string>
    <string name="pending_count">Pending:&#160;</string>
    <string name="suspend_count">Suspend:&#160;</string>
    <string name="dealed_count">Resolved:&#160;</string>
    <string name="participant">Participant:&#160;</string>
    <string name="task_details">Task Details</string>
    <string name="task_state_details_non">Pending</string>
    <string name="task_state_details_finish">Completed</string>
    <string name="no_creater">Temporary unattended</string>
    <string name="task_picture">Task picture:&#160;</string>
    <string name="take_photo">Camera</string>
    <string name="select_from_album">Select from album</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="modify">Modify</string>
    <string name="album">Album</string>
    <string name="max_picture">Select up to 9 pictures</string>
    <string name="finish">Finish</string>
    <string name="task_reason">Task Reason</string>
    <string name="task_reason_add">Task reason:&#160;</string>
    <string name="task_note">Task remarks:&#160;</string>
    <string name="hint_task_note">Please enter a task note</string>
    <string name="tips_tasktype_post">Task type must not be empty</string>
    <string name="tips_subtype_post">Task subtype must not be empty</string>
    <string name="tips_scan_operator_post">Creator must not be empty</string>
    <string name="tips_team_type_post">Group must not be empty</string>
    <string name="tips_device_name_post">Equipment name must not be empty</string>
    <string name="tips_device_num_post">Machine number can not be empty</string>
    <string name="tips_task_desc_post">Task description must not be empty</string>
    <string name="work_num">Work number:&#160;</string>
    <string name="work_num_dialog">Work Number</string>
    <string name="work_name">Work name:&#160;</string>
    <string name="work_status">Status:&#160;</string>
    <string name="auditing_status">Audit status:&#160;</string>
    <string name="work_description">Work description:&#160;</string>
    <string name="approved_working_hours">Approved working hours:&#160;</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="sub_task">Sub Task</string>
    <string name="sub_task_equipment_num">Machine number:&#160;</string>
    <string name="sure">Confirm</string>
    <string name="warranty_person">Creator:&#160;</string>
    <string name="task_main_person">Principal:&#160;</string>
    <string name="tag_hint">Tag to write letters, numbers, underscores, Chinese, and more than one comma separated by a comma</string>
    <string name="alias_hint">Alias to write letters, numbers, underscores</string>
    <string name="style_hint">Style as number</string>
    <string name="error_style_empty">Style must not be empty</string>
    <string name="error_alias_empty">Alias must not be empty</string>
    <string name="error_tag_empty">Tag must not be empty</string>
    <string name="error_tag_gs_empty">Wrong format</string>
    <string name="error_network">Network connection exception, initialization failed please check network!</string>
    <string name="error_add_equipment">The task is non equipment related,unable to add equipment.</string>
    <string name="can_not_add_equipment">Unable to add equipment</string>
    <string name="setting_su">Setting successful</string>
    <string name="invitor_help">Invite Assistance</string>
    <string name="workname">Name:&#160;</string>
    <string name="tech">Skill:&#160;</string>
    <string name="task_descr">Task description:&#160;</string>
    <string name="operation">operation:&#160;</string>
    <string name="err_add_task_equipment">Add task equipment fail</string>
    <string name="UserName">Name:&#160;</string>
    <string name="username">Name:&#160;</string>
    <string name="workerName">Name:&#160;</string>
    <string name="WorkNum">Work number:&#160;</string>
    <string name="workNumber">Work number:&#160;</string>
    <string name="DownloadDataBase">Downloading data</string>
    <string name="task_create_time">Time created:&#160;</string>
    <string name="task_accept_time">Received order time:&#160;</string>
    <string name="task_complete_time">finish time:&#160;</string>
    <string name="task_id">Task id:&#160;</string>
    <string name="taskid">Task id:&#160;</string>
    <string name="response_speed">Response time:&#160;</string>
    <string name="service_attitude">Service status:&#160;</string>
    <string name="repair_speed">Repair duration:&#160;</string>
    <string name="command_standard"><![CDATA[Score standard:  1–5 star, the 5 highest]]></string>
    <string name="waitingDeal">Pending Treat</string>
    <string name="start">Pending</string>
    <string name="process">In progress</string>
    <string name="pause">Suspend</string>
    <string name="resume">Resume</string>
    <string name="wait_material">Wait Material</string>
    <string name="material_requisition">Material Requisition</string>
    <string name="quit">Quit</string>
    <string name="complete">Complete</string>
    <string name="checkHistoryRecord">History query</string>
    <string name="please_select">Please select</string>
    <string name="fault_summary">Breakdown Summary</string>
    <string name="task_summary">Task Summary</string>
    <string name="task_summary_tag">Task summary:&#160;</string>
    <string name="task_other_summary_tag">Task summary:&#160;</string>
    <string name="fault_type">Breakdown type:&#160;</string>
    <string name="equipment_status">Equipment status:&#160;</string>
    <string name="target_group_tag">Target plant:&#160;</string>
    <string name="machine_oracle_id">OracleID:</string>
</resources>